[gd_scene load_steps=17 format=3 uid="uid://d37washb3psk8"]

[ext_resource type="Script" path="res://Objects/Towers/towerBase.gd" id="1_1hgr3"]
[ext_resource type="Resource" uid="uid://jktcxr6rb0x" path="res://Objects/Towers/Tower Data/Blue.tres" id="2_nr8ny"]
[ext_resource type="Texture2D" uid="uid://bf60ks0qukwna" path="res://Resources/Sprites/Towers/gunner1_1.png" id="3_phc2j"]
[ext_resource type="Texture2D" uid="uid://bboy6527x076r" path="res://Resources/Sprites/Towers/gunner1_4.png" id="4_8osrt"]
[ext_resource type="Texture2D" uid="uid://dsjellqapisso" path="res://Resources/Sprites/Towers/gunner1_5.png" id="5_6pnlu"]
[ext_resource type="Texture2D" uid="uid://c6fgphthr5x8c" path="res://Resources/Sprites/Towers/gunner1_3.png" id="6_565io"]
[ext_resource type="Texture2D" uid="uid://34yj4rlr8dvs" path="res://Resources/Sprites/Towers/gunner1_2.png" id="7_c8lwh"]
[ext_resource type="Texture2D" uid="uid://cp34oltbr4ocn" path="res://Resources/Sprites/Towers/gunner2_1.png" id="8_5s7hg"]
[ext_resource type="Texture2D" uid="uid://jah2ndmkf6w8" path="res://Resources/Sprites/Towers/gunner2_4.png" id="9_nwcgc"]
[ext_resource type="Texture2D" uid="uid://dtqbw56bgwq8n" path="res://Resources/Sprites/Towers/gunner2_5.png" id="10_fnp1l"]
[ext_resource type="Texture2D" uid="uid://cn70312ml5pd8" path="res://Resources/Sprites/Towers/gunner2_3.png" id="11_1c1y2"]
[ext_resource type="Texture2D" uid="uid://tw15m4b1qikc" path="res://Resources/Sprites/Towers/gunner2_2.png" id="12_a1ptd"]
[ext_resource type="Texture2D" uid="uid://bwcy3sdal5lxw" path="res://Resources/Sprites/Enemies/crosshair.png" id="13_nvo6j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wibvd"]
size = Vector2(18, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_wc7r5"]
radius = 50.0

[sub_resource type="SpriteFrames" id="SpriteFrames_64erv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_phc2j")
}, {
"duration": 1.0,
"texture": ExtResource("4_8osrt")
}, {
"duration": 1.0,
"texture": ExtResource("5_6pnlu")
}, {
"duration": 1.0,
"texture": ExtResource("6_565io")
}, {
"duration": 1.0,
"texture": ExtResource("7_c8lwh")
}],
"loop": false,
"name": &"Blue",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_5s7hg")
}, {
"duration": 1.0,
"texture": ExtResource("9_nwcgc")
}, {
"duration": 1.0,
"texture": ExtResource("10_fnp1l")
}, {
"duration": 1.0,
"texture": ExtResource("11_1c1y2")
}, {
"duration": 1.0,
"texture": ExtResource("12_a1ptd")
}],
"loop": false,
"name": &"Red",
"speed": 15.0
}]

[node name="towerBase" type="Node2D"]
script = ExtResource("1_1hgr3")
towerData = ExtResource("2_nr8ny")

[node name="Draggable Item Collision" type="Area2D" parent="."]
position = Vector2(-10, -11)
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Draggable Item Collision"]
position = Vector2(9, 11)
shape = SubResource("RectangleShape2D_wibvd")

[node name="Range" type="Area2D" parent="."]
collision_mask = 2

[node name="Range" type="CollisionShape2D" parent="Range"]
shape = SubResource("CircleShape2D_wc7r5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(4, 0)
rotation = -1.5708
sprite_frames = SubResource("SpriteFrames_64erv")
animation = &"Red"

[node name="Shoot Location" type="Marker2D" parent="AnimatedSprite2D"]
visible = false
position = Vector2(-2.86102e-05, 8)
rotation = 1.5708

[node name="crosshair" type="Sprite2D" parent="AnimatedSprite2D/Shoot Location"]
z_index = 1
scale = Vector2(0.64, 0.64)
texture = ExtResource("13_nvo6j")

[node name="crosshair" type="Sprite2D" parent="."]
visible = false
z_index = 1
scale = Vector2(0.8, 0.8)
texture = ExtResource("13_nvo6j")

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="Draggable Item Collision" to="." method="_on_draggable_item_collision_area_entered"]
[connection signal="area_entered" from="Range" to="." method="_on_range_area_entered"]
[connection signal="area_exited" from="Range" to="." method="_on_range_area_exited"]
[connection signal="mouse_entered" from="Range" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Range" to="." method="_on_area_2d_mouse_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
